--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.1.0",
+    "lucide-react": "^0.124.0",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
