added sanity and embedded with nextjs. added two example blog posts and added latest blog post section on home page, fixed some issues on darkmodetoogle, fixed some colors on headers, added preview mode to sanity

--- a/package.json
+++ b/package.json
@@ -9,22 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^2.0.2",
+    "@sanity/code-input": "^4.1.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.0.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@yaireo/relative-time": "^1.0.3",
     "clsx": "^1.2.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.1.0",
     "lucide-react": "^0.124.0",
     "next": "13.2.3",
+    "next-sanity": "^4.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "sanity": "^3.0.0",
+    "styled-components": "^5.2.0",
     "tailwind-merge": "^1.10.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1",
+    "@types/yaireo__relative-time": "^1.0.0",
     "autoprefixer": "^10.4.13",
     "eslint-plugin-tailwindcss": "^3.10.1",
     "postcss": "^8.4.21",
