--- a/package.json
+++ b/package.json
@@ -28,13 +28,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-syntax-highlighter": "^15.5.0",
     "sanity": "^3.0.0",
+    "speakingurl": "^14.0.1",
     "styled-components": "^5.2.0",
     "tailwind-merge": "^1.10.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "@types/refractor": "^3.0.2",
     "@types/yaireo__relative-time": "^1.0.0",
     "autoprefixer": "^10.4.13",
     "eslint-plugin-tailwindcss": "^3.10.1",
