added localization with i18n

--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.1.0",
+    "i18next": "^22.4.11",
     "lucide-react": "^0.124.0",
     "next": "13.2.3",
+    "next-i18next": "^13.2.2",
     "next-sanity": "^4.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
     "react-syntax-highlighter": "^15.5.0",
     "sanity": "^3.0.0",
